--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,75 @@
-p {
-    color: blue;
+.banner {
+    width: 100%;
+    height: 100vh;
+    background-image: url('image1.jpg');
+}
+
+body {
+    margin: 0;
+}
+
+.nav-bar {
+    width: 100%;
+    height: 70px;
+}
+
+#logo, #links {
+    height: 100%;
+    display: inline-block;
+    float: left;
+}
+
+#links {
+    float: right;
+    height: 72%;
+    padding-top: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 23px;
+    widows: 500px;
+}
+
+#links ul {
+    display: inline;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-left: 70px;
+}
+
+#logo img {
+    height: 70px;
+    width: auto;
+}
+
+#links ul li {
+    display: inline;
+    margin: 40px 15px 0 15px;
+}
+
+#links ul li a {
+    text-decoration: none;
+    color: black;
+}
+
+#logo {
+    padding: 20px;
+    width: auto;
+}
+
+#header {
+    width: 300px;
+    height: 50px;
+    margin-top: 30px;
+    margin-left: 600px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 27px;
+}
+
+#button  {
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 15px;
 }
