--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 .banner {
     width: 100%;
     height: 100vh;
-    background-image: url('image1.jpg');
+    background-image: url('image1.jpg')
 }
 
 body {
@@ -16,7 +16,6 @@ body {
 #logo, #links {
     height: 100%;
     display: inline-block;
-    float: left;
 }
 
 #links {
@@ -25,7 +24,7 @@ body {
     padding-top: 20px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 23px;
-    widows: 500px;
+    width: 500px;
 }
 
 #links ul {
@@ -33,7 +32,7 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
-    padding-left: 70px;
+    /*padding-left: 70px;*/
 }
 
 #logo img {
@@ -57,10 +56,10 @@ body {
 }
 
 #header {
-    width: 300px;
+    width: 100%;
     height: 50px;
     margin-top: 30px;
-    margin-left: 600px;
+    text-align: center;
     font-family: 'Times New Roman', Times, serif;
     font-size: 27px;
 }
@@ -73,3 +72,98 @@ body {
     font-weight: bold;
     font-size: 15px;
 }
+
+#button:hover {
+    text-decoration-line: underline;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+#p1 {
+    width: 100%;
+    text-align: center;
+    margin-top: 70;
+    font-size: 25;
+    padding: 0 100px 0 100px;
+}
+
+#p2 {
+    width: 100%;
+    text-align: center;
+    margin-top: 70;
+    font-size: 25;
+    padding: 0 100px 0 100px;
+}
+
+/* START OF FORM */
+
+* {
+    box-sizing: border-box;
+}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+}
+
+label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+}
+
+input[type=submit] {
+    background-color: #13d389;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: not-allowed;
+    opacity: 0.6;
+    float: right;
+}
+
+input[type=submit]:hover {
+    background-color: #13d389;
+    text-decoration-line: underline;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    width: 1000px;
+    margin-left: 218px;
+    margin-top: 50px;
+}
+
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
+    }
+}
+
+/* END OF FORM */
