--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,11 @@
 .banner {
     width: 100%;
     height: 100vh;
-    background-image: url('image1.jpg')
+    background: linear-gradient(
+        rgba(255,255,255,0.45),
+        rgba(255,255,255,0.45)
+    ),
+    url('image1.jpg');
 }
 
 body {
@@ -81,20 +85,20 @@ body {
 #p1 {
     width: 100%;
     text-align: center;
-    margin-top: 70;
-    font-size: 25;
+    margin-top: 70px;
+    font-size: 25px;
     padding: 0 100px 0 100px;
 }
 
 #p2 {
     width: 100%;
     text-align: center;
-    margin-top: 70;
-    font-size: 25;
+    margin-top: 70px;
+    font-size: 25px;
     padding: 0 100px 0 100px;
 }
 
-/* START OF FORM */
+/* START OF FORM contact us */
 
 * {
     box-sizing: border-box;
@@ -166,4 +170,19 @@ input[type=submit]:hover {
     }
 }
 
-/* END OF FORM */
+/* END OF FORM contact us */
+
+#profile-image img {
+    width: auto;
+    height: 40%;
+    margin-left: 13%;
+    margin-top: 5%;
+}
+
+#p3 {
+    width: 100%;
+    text-align: center;
+    margin-top: 70px;
+    font-size: 25px;
+    padding: 0 100px 0 100px;
+}
