--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,8 @@
     width: 100%;
     height: 100vh;
     background: linear-gradient(
-        rgba(255,255,255,0.45),
-        rgba(255,255,255,0.45)
+        rgba(255,255,255,0.75),
+        rgba(255,255,255,0.75)
     ),
     url('image1.jpg');
 }
@@ -172,17 +172,101 @@ input[type=submit]:hover {
 
 /* END OF FORM contact us */
 
-#profile-image img {
-    width: auto;
-    height: 40%;
-    margin-left: 13%;
-    margin-top: 5%;
+/* START PROFILE PAGE */
+
+#profile-section img {
+    margin-right: 3%;
+    width: 20%;
+    height: auto;
+    padding: 1%;
+    margin-left: 5%;
+    float: left;
 }
 
-#p3 {
+#profile-section p {
+    padding: 0 100px 0 100px;
+    width: 100%;
+    text-align: center;
+    margin-top: 80px;
+    font-size: 25px;
+}
+
+/* END PROFILE PAGE*/
+
+/* START LOCATION PAGE */
+
+#back-to-contact {
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 23px;
+    padding: 2%;
+    display: block;
+    width: auto;
+}
+
+#location-address {
+    display: block;
+    width: auto;
+    height: auto;
+    margin-left: 20%;
+    margin-top: 5%;
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#google-maps {
+    margin-left: 61%;
+    margin-top: -16%;
+}
+
+/* END LOCATION PAGE */
+
+#to-location-page {
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 23px;
+    padding-top: 2%;
+    display: block;
+    width: auto;
+}
+
+/* START LOGIN PAGE */
+
+#login1 {
+    width: 25%;
+    height: auto;
+    display: block;
+    text-align: center;
+    margin-left: 37%;
+    margin-top: 12%;
+}
+
+/* END LOGIN PAGE */
+
+#p4 {
     width: 100%;
     text-align: center;
     margin-top: 70px;
     font-size: 25px;
     padding: 0 100px 0 100px;
 }
+
+/*.flex-container {                             NEEDS WORK (HTML INDEX ASWELL)
+    display: flex;
+    flex-wrap: nowrap;
+
+}
+
+.flex-container div {
+    background-color: #f1f1f1;
+    width: 100px;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+}
+
+.flex-container div img {
+    width: 100px;
+    height: 50px;
+} */
