--- a/assets/style.css
+++ b/assets/style.css
@@ -172,26 +172,31 @@ input[type=submit]:hover {
 
 /* END OF FORM contact us */
 
-/* START PROFILE PAGE */
+/* START HISTORY PAGE */
 
-#profile-section img {
-    margin-right: 3%;
-    width: 20%;
-    height: auto;
-    padding: 1%;
-    margin-left: 5%;
-    float: left;
-}
-
-#profile-section p {
-    padding: 0 100px 0 100px;
-    width: 100%;
+#history-section p {
+    width: 68%;
     text-align: center;
-    margin-top: 80px;
+    margin-top: 70px;
     font-size: 25px;
+    padding: 0 100px 0 100px;
+    float: right;
+    display: block;
 }
 
-/* END PROFILE PAGE*/
+#history-section img {
+    width: auto;
+    height: auto;
+    float: left;
+    margin-top: -30%;
+    margin-left: 5%;
+    display: block;
+    background:transparent;
+    padding:8px;
+    border:1px solid #999999;
+}
+
+/* END HISTORY PAGE*/
 
 /* START LOCATION PAGE */
 
@@ -251,22 +256,30 @@ input[type=submit]:hover {
     padding: 0 100px 0 100px;
 }
 
-/*.flex-container {                             NEEDS WORK (HTML INDEX ASWELL)
+/* INDEX FLEXBOX START*/
+
+.flex-container {                             
     display: flex;
-    flex-wrap: nowrap;
-
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
 
-.flex-container div {
-    background-color: #f1f1f1;
-    width: 100px;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
+.flex-container img {
+    height: 200px;
 }
 
-.flex-container div img {
-    width: 100px;
-    height: 50px;
-} */
+.image-frame {
+    background:transparent;
+    padding:8px;
+    border:1px solid #999999;
+}
+
+/* INDEX FLEXBOX END */
+
+/* ABOUT US PAGE START */
+#image8-pos img {
+    margin-left: 34%;
+    width: auto;
+    height: 38%;
+}
+/* ABOUT US PAGE STOP */
